# nnsightful

./: .gitignore  README.md  REFACTORING.md  esbuild.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
examples/: lineplot.ipynb
src/charts/: detect-theme-mode.ts  index.ts  standalone.ts
src/charts/core/heatmap-table/: colors.ts  index.ts  renderer.ts  styles.ts
src/charts/core/line-plot/: colors.ts  index.ts  legend.ts  renderer.ts  tooltip.ts  utils.ts
src/charts/core/logit-lens/: index.ts  state.ts  styles.ts  utils.ts  widget.ts
src/charts/react/: ActivationPatchingWidget.tsx  HeatmapTableWidget.tsx  LinePlotWidget.tsx  LogitLensWidget.tsx  index.ts
src/charts/types/: activation-patching.ts  base.ts  heatmap-table.ts  index.ts  line-plot.ts  logit-lens.ts
src/charts/visualizations/activation-patching/: index.ts  token-selector.ts
src/charts/visualizations/logit-lens/: colors.ts  index.ts  normalize.ts  state.ts  styles.ts  widget.ts
src/nnsightful/: __init__.py  types.py
src/nnsightful/tools/: _base.py  _utils.py  activation_patching.py  logit_lens.py
src/nnsightful/viz/: __init__.py  charts.js
src/nnterp_kit/: __init__.py  types.py
src/nnterp_kit/tools/: logit_lens.py
src/nnterp_kit/viz/: __init__.py
tests/: README.md  conftest.py  test_activation_patching.py  test_logit_lens.py  test_utils.py  test_viz.py
tests/benchmark/: README.md  __init__.py  __main__.py  backend.py  benchmark_diff.md  config.py  diff.py  plots.py  prompts.py  results.json  results.md  runner.py
