[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nnterp-kit"
version = "0.1.0"
description = "Interpretability tools for neural networks"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
tools = [
    "torch",
    "nnsight",
]
viz = [
    "ipython",
]
all = [
    "nnterp-kit[tools,viz]",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["nnterp_kit*"]
