[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nnsightful"
version = "0.1.0"
description = "A higher-level extension of NNsight providing ready-to-use mechanistic interpretability methods (logit lens, activation patching) and interactive visualizations for exploring the results"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "nnsight",
    "ipython",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["nnsightful*"]
