[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nnsightful"
version = "0.1.0"
description = "A higher-level extension of NNsight providing ready-to-use mechanistic interpretability methods (logit lens, activation patching) and interactive visualizations for exploring the results"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "nnterp",
    "ipython",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff",
    "ty",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["nnsightful*"]

[tool.setuptools.package-data]
nnsightful = ["viz/*.js"]

[tool.ty.environment]
python-version = "3.11"
root = ["src"]

[tool.ty.src]
exclude = ["src/nnsightful/viz/", "src/nnsightful/tools/"]

[tool.ty.analysis]
allowed-unresolved-imports = ["pydantic.**", "nnterp.**", "nnsight.**", "torch.**", "IPython.**"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
